...
    
    [self createDoneBarButton];
    
    _delegateNotified = NO;
    _datePickerVisible = NO;
    _date = [NSDate date];
    self.expenseTextField.accessibilityIdentifier = @"enter_amount";
}

- (void)viewDidAppear:(BOOL)animated {
    [super viewDidAppear:animated];
    [_expenseTextField becomeFirstResponder];
    self.expenseTextField.accessibilityIdentifier = @"enter_amount";
...
